# DSSS-2025

./: .gitignore  About.qml  CMakeLists.txt  ConfirmationDialog.qml  EntryDetailsPopup.qml  FileReader.qml  HistoryEntryCard.qml  HistoryListView.qml  HistoryPanel.qml  LogView.qml  Main.qml  MyCombobox.qml  MyCombobox_Log.qml  MyMenu.qml  MyTextfArea.qml  README.md  Result.qml  StatisticsView.qml  decisionengine.cpp  decisionengine.h  historymanager.cpp  historymanager.h  main.cpp  temp.qml
Other files/: 06_Moeinifar_Vahid_GDSS_Progress.md  06_Moeinifar_Vahid_GDSS_Progress_13Jan2026.md  06_Moeinifar_Vahid_GDSS_Progress_17Nov2025.md  06_Moeinifar_Vahid_GDSS_Progress_2Dec2025.md
docs/: 404.html  Advanced Features.html  Data Input Methods.html  Frequently Asked Questions.html  Fusion Algorithms.html  Getting Started.html  Installation and Setup.html  Intro.html  System Overview.html  Technical Reference.html  Troubleshooting.html  Working with Files.html  _config.yml  blog.html  index.html  index.md  introduction.md  markdown-page.html  sitemap.xml
docs/_includes/: footer.html  header.html  sidebar.html
docs/_layouts/: default .html  default.html
docs/assets/css/: style.css  (+2 more)
docs/blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/category/: tutorial---extras.html
docs/docs/: Advanced Features.html  Frequently Asked Questions.html  Fusion Algorithms.html  System Overview.html  Technical Reference.html  Troubleshooting.html
docs/tutorial-extras/: manage-docs-versions.html  translate-your-site.html
gdss-docs/: docusaurus.config.ts  package-lock.json  package.json
gdss-docs/builded-site/: 404.html  index.html  sitemap.xml
gdss-docs/docs/: Advanced Features.md  Data Input Methods.md  Frequently Asked Questions.md  Fusion Algorithms.md  Getting Started.md  Installation and Setup.md  Intro.md  System Overview.md  Technical Reference.md  Troubleshooting.md  Working with Files.md
scripts/: consensus.py  fuse.py  fuzzy.py  neural.py  random_forest.py  weighted - Copy.py  weighted_with_confidence.py
(+199 files in other folders)
